--- a/app/index.html
+++ b/app/index.html
@@ -236,6 +236,7 @@
         <script src="scripts/controllers/modal/edit_expense_popup.js"></script>
         <script src="scripts/controllers/modal/edit_income_popup.js"></script>
         <script src="scripts/controllers/modal/category_filter_popup.js"></script>
+        <script src="scripts/controllers/modal/function_locked_popup.js"></script>
         <script src="scripts/controllers/modal/edit_category_popup.js"></script>
         <script src="scripts/controllers/modal/save-counterparty.modal.ctrl.js"></script>
         <!-- endbuild -->
