Add one income/expense

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,8 @@
                   <span class="glyphicon glyphicon-piggy-bank"> Income<span class="caret"></span></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="#/add_incomes">Add incomes</a></li>
+                  <li><a href="#/add_income">Add one</a></li>
+                  <li><a href="#/add_incomes">Add multiple</a></li>
                   <li><a href="#/incomes_history">Incomes history</a></li>
                   <li><a href="#/incomes_chart">Incomes chart</a></li>
                 </ul>
@@ -72,7 +73,8 @@
                   <span class="glyphicon glyphicon-usd"> Expense<span class="caret"></span></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="#/add_expenses">Add expenses</a></li>
+                  <li><a href="#/add_expense">Add one</a></li>
+                  <li><a href="#/add_expenses">Add multiple</a></li>
                   <li><a href="#/expenses_history">Expenses history</a></li>
                   <li><a href="#/expenses_chart">Expenses chart</a></li>
                   <li><a href="#/expense_categories">Categories</a></li>
@@ -219,10 +221,12 @@
         <script src="scripts/controllers/user/renew_forgot_password.js"></script>
         <script src="scripts/controllers/user/activation.js"></script>
         <script src="scripts/controllers/user/payment.js"></script>
+        <script src="scripts/controllers/expense/add_expense.ctrl.js"></script>
         <script src="scripts/controllers/expense/add_expenses.ctrl.js"></script>
         <script src="scripts/controllers/expense/expenses_history.js"></script>
         <script src="scripts/controllers/expense/expenses_chart.js"></script>
         <script src="scripts/controllers/expense/expense_categories.js"></script>
+        <script src="scripts/controllers/income/add_income.ctrl.js"></script>
         <script src="scripts/controllers/income/add_incomes.ctrl.js"></script>
         <script src="scripts/controllers/income/incomes_history.js"></script>
         <script src="scripts/controllers/income/incomes_chart.js"></script>
