Fix observations - DC amount currency + delete icon on add multiple + refresh rootScope on login

--- a/app/index.html
+++ b/app/index.html
@@ -153,6 +153,9 @@
         <div class="form-group row" style="margin-bottom: 5px;">
           <span class="col-5">Made by Wasy Software</span>
           <span class="col-7" style="float:right;">Any feedback appreciated at: <b><i>feedback.theacctnt@gmail.com</i></b></span>
+        </div><div class="form-group row" style="margin-bottom: 5px;">
+          <span class="col-5"></span>
+          <span class="col-7" style="float:right;">For any technical support please e-mail us at: <b><i>help.theacctnt@gmail.com</i></b></span>
         </div>
       </div>
     </div>
