Tasks 19, 20 - On http 401 response - redirect to login page

--- a/app/index.html
+++ b/app/index.html
@@ -210,6 +210,7 @@
         <script src="scripts/services/host_name.js"></script>
         <script src="scripts/services/modal_template_service.js"></script>
         <script src="scripts/services/payment/payment.service.js"></script>
+        <script src="scripts/services/unauthorized_interceptor/unauthorized_interceptor.js"></script>
 
         <script src="scripts/directives/bs_tooltip.js"></script>
         <script src="scripts/directives/loading_page.js"></script>
